cmake_minimum_required(VERSION 3.6)
set(VI_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/deps/vitex CACHE STRING "Vitex directory")
set(VI_ALLOCATOR ON CACHE BOOL "-")
set(VI_BINDINGS ON CACHE BOOL "-")
set(VI_BACKTRACE OFF CACHE BOOL "-")
set(VI_WEPOLL OFF CACHE BOOL "-")
set(VI_FCTX OFF CACHE BOOL "-")
set(VI_SIMD OFF CACHE BOOL "-")
set(VI_ASSIMP OFF CACHE BOOL "-")
set(VI_FREETYPE OFF CACHE BOOL "-")
set(VI_GLEW OFF CACHE BOOL "-")
set(VI_OPENAL OFF CACHE BOOL "-")
set(VI_OPENGL OFF CACHE BOOL "-")
set(VI_OPENSSL OFF CACHE BOOL "-")
set(VI_ZLIB OFF CACHE BOOL "-")
set(VI_SDL2 OFF CACHE BOOL "-")
set(VI_SQLITE OFF CACHE BOOL "-")
set(VI_POSTGRESQL OFF CACHE BOOL "-")
set(VI_MONGOC OFF CACHE BOOL "-")
set(VI_SPIRV OFF CACHE BOOL "-")
set(VI_BULLET3 OFF CACHE BOOL "-")
set(VI_RMLUI OFF CACHE BOOL "-")
set(VI_TINYFILEDIALOGS OFF CACHE BOOL "-")
set(VI_STB OFF CACHE BOOL "-")
set(VI_PUGIXML OFF CACHE BOOL "-")
set(VI_RAPIDJSON OFF CACHE BOOL "-")
set(VI_SHADERS OFF CACHE BOOL "-")
include(${VI_DIRECTORY}/deps/toolchain.cmake)
project(hello)
if (NOT DEFINED CMAKE_RUNTIME_OUTPUT_DIRECTORY)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/bin)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/bin)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_SOURCE_DIR}/bin)
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/bin)
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/bin)
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_SOURCE_DIR}/bin)
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/bin)
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/bin)
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_SOURCE_DIR}/bin)
endif()
add_subdirectory(${VI_DIRECTORY} vitex)
link_directories(${VI_DIRECTORY})
add_library(hello SHARED
    ${CMAKE_CURRENT_SOURCE_DIR}/addon.cpp)
set_target_properties(hello PROPERTIES
    OUTPUT_NAME "hello"
    CXX_STANDARD ${VI_CXX}
    CXX_STANDARD_REQUIRED ON
    CXX_EXTENSIONS OFF)
target_include_directories(hello PRIVATE ${VI_DIRECTORY})
target_link_libraries(hello PRIVATE vitex)